--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.7.1",
     "mocha": "3.2.0"
   },
   "repository": {
