--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Tic tac toe project",
   "main": "lib/ticTacToe.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --opts tests/mocha.opts"
+    "test": "nyc node_modules/.bin/mocha --opts tests/mocha.opts ",
+    "stryker": "stryker run stryker.conf.js"
   },
   "devDependencies": {
     "chai": "3.5.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "nyc": "^10.3.2",
+    "stryker": "^0.6.1",
+    "stryker-api": "^0.5.0",
+    "stryker-html-reporter": "^0.4.1",
+    "stryker-mocha-runner": "^0.3.1"
   },
   "repository": {
     "type": "git",
